# onvif-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
discovery/: Cargo.toml
discovery/src/: discovery.rs  lib.rs
lib/: Cargo.toml
lib/src/: discovery.rs  get_system_date_and_time.rs  http.rs  lib.rs  onvif_operation.rs  soap.rs  wsdl.rs
lib/src/operations/: discovery.rs
lib/src/wsdl/: get_system_date_and_time.rs  probe.rs
onvif/: Cargo.toml
onvif/src/: lib.rs
soap/: Cargo.toml
soap/src/: lib.rs  soap.rs
wsdl/: Cargo.toml
wsdl/src/wsdl/: get_system_date_and_time.rs  probe.rs
