[package]
name = "cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
lib = { path = "../lib"}
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }