[package]
name = "soap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { path = "../onvif" }
wsdl = { path = "../wsdl" }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.17"
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
quick-xml = { version = "0.25.0", features = ["serialize"]}
