[package]
name = "wsdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { path = "../onvif"}
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
quick-xml = { version = "0.25.0", features = ["serialize"]}
